fix github workflows

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,13 +15,13 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Cache Docker layers
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: ~/.cache
           key: ${{ runner.os }}-docker-${{ github.sha }}
@@ -29,17 +29,17 @@ jobs:
             ${{ runner.os }}-docker-
 
       - name: Log in to GitHub Container Registry (GHCR)
-        uses: docker/login-action@v2
+        uses: docker/login-action@v4
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.actor }}/nginx-docker:${{ github.sha }}
-          cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/nginx-docker:latest
-          cache-to: type=registry,ref=ghcr.io/${{ github.actor }}/nginx-docker:latest,mode=max
+          tags: ghcr.io/${{ github.actor }}/gft-admin:${{ github.sha }}
+          cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/gft-admin:latest
+          cache-to: type=registry,ref=ghcr.io/${{ github.actor }}/gft-admin:latest,mode=max
