--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -35,15 +35,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: huieric/gft-admin:latest
+          tags: ghcr.io/${{ github.repository  }}/gft-admin:${{ github.sha }}
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository  }}/gft-admin:latest
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository  }}/gft-admin:latest,mode=max
