--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,15 +1,20 @@
-server {
-    listen 6080;
+error_log /home/admin/logs/nginx/error.log warn;
+http {
+    access_log /home/admin/logs/nginx/access.log main;
 
-    location / {
-        root /var/www/html;
-        index index.html;
-        try_files $uri /index.html;
-    }
+    server {
+        listen 6080;
 
-    location /api/ {
-        proxy_pass http://127.0.0.1:5000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        location / {
+            root /var/www/html;
+            index index.html;
+            try_files $uri /index.html;
+        }
+
+        location /api/ {
+            proxy_pass http://127.0.0.1:5000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
     }
 }
